<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome" >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/usernameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcomeText"
        android:layout_alignRight="@+id/welcomeText"
        android:layout_below="@+id/welcomeText"
        android:ems="10"
        android:hint="@string/username" >

    </EditText>

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameBox"
        android:layout_alignRight="@+id/usernameBox"
        android:layout_below="@+id/usernameBox"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_alignLeft="@+id/passwordBox"
        android:layout_alignRight="@+id/passwordBox"
        android:layout_below="@+id/passwordBox"
        android:text="@string/login" 
        android:onClick="logIn" />
    
</RelativeLayout>